--- a/app/partials/controls/nav.html
+++ b/app/partials/controls/nav.html
@@ -32,6 +32,7 @@
                         <a id="451qa_cart_link" ng-show="cartCount && user.CurrentOrderID" class="cart cartPulledRightBackground" href="cart">
                             <span ng-bind="cartCount" class="badge cartCountControl"></span>
                             <i class="fa fa-shopping-cart shoppingCartBadge"></i>
+                            <!--<i class="fa fa-caret-down"></i>-->
                         </a>
                     </li>
                 </ul>
