--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -168,5 +168,17 @@
     	background-color: white;
     }
     
+    .h3Target h3 {
+        font-size: 19px;
+    } 
+    
+    .empty {
+        padding: 10.5px;
+    }
+    
+    
+    
+    
+    
     
     
