--- a/app/partials/controls/shortProductViewMinimal.html
+++ b/app/partials/controls/shortProductViewMinimal.html
@@ -9,7 +9,7 @@
             </div>
         </a>
     </div>
-    <div class="col-xs-12 text-left">
+    <div class="col-xs-12 text-left h3Target">
         <div class="panel-body">
             <h3 class="text-center">{{LineItem.Product.Name}}</h3>
             <div>
