--- a/app/partials/cartView.html
+++ b/app/partials/cartView.html
@@ -1,4 +1,4 @@
-<section>
+<section class="animated fadeIn pageLoadControl">
     <div ng-show="currentOrder" class="hidden-print">
         <nav class="nav">
             <ul>
