--- a/app/partials/categoryView.html
+++ b/app/partials/categoryView.html
@@ -1,4 +1,4 @@
-<section>
+<section class="animated fadeIn pageLoadControl">
     <nav id="451qa_nav_hdr" class="nav">
         <ul id="categoryTitleContainer">
             <li class="hidden-sm hidden-xs">
