--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -45,6 +45,8 @@
         /* display: none !important; */
     }
     
+    /* This controls the category and product names */
+    
     .navColors {
         color: black !important;
         
