--- a/app/partials/copyrightView.html
+++ b/app/partials/copyrightView.html
@@ -1,5 +1,21 @@
-<footer class="container copyright-view">
+<!--<footer class="footerContainer">
+    <section class="animated infinite zoomIn">
+        <a href="link"><i class="fa fa-truck fa-3x socialIcon animated rubberBand"></i></a> 
+        <i class="fa fa-circle gaps"></i>
+        <a href="link"><i class="fa fa-twitter fa-3x socialIcon animated rubberBand"></i></a>
+        <i class="fa fa-circle gaps"></i>
+        <a href="link"><i class="fa fa-facebook fa-3x socialIcon animated rubberBand"></i></a>
+        <i class="fa fa-circle gaps"></i>
+        <a href="link"><i class="fa fa-youtube fa-3x socialIcon animated rubberBand"></i></a>        
+        <i class="fa fa-circle gaps"></i>
+        <a href="link"><i class="fa fa-pinterest fa-3x socialIcon animated rubberBand"></i></a>         
+    </section>
+</footer>
+-->
+
+<!--<footer class="container copyright-view">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-<!--        <p id="tagline">****input text here**</p>   -->
+       <p id="tagline">****input text here**</p>  
     </div>
 </footer>
+-->
