--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -211,6 +211,25 @@
         padding: 10.5px;
     }
     
+    /* This controls the height of the logo container. Adjust this, to adjust the height
+       of the space surrounding the main logo. */
+	
+	.jumbotron .container {
+		height: 300px;  /* custom message no */
+		/* height: 360px;  custom message yes | ensure height matches margin-top on .navbar-fixed-top above */
+		padding: 0 0px;
+		overflow: hidden;
+	}
+	
+	/* This controls the height of the margin above the navbar. */
+
+    	.navbar-fixed-top {
+		position: static;
+		margin-top: 300px /*  custom message no */
+		/* margin-top: 345px;  custom message yes | ensure margin matches height on .jumbotron .container below */
+	}
+
+    
     /* pageLoadControl is used to delay the load of the page 
        in order to mask the page flicker caused by the base app */
        
@@ -219,14 +238,14 @@
        once the animation begins */
     
     .pageLoadControl {
-        -webkit-animation-duration: 1s;
-        -webkit-animation-delay: 1.5s;
-        -ms-animation-duration: 1s;
-        -ms-animation-delay: 1.5s;
-        -o-animation-duration: 1s;
-        -o-animation-delay: 1.5s;        
-        -moz-animation-duration: 1s;
-        -moz-animation-delay: 1.5s;          
+        -webkit-animation-duration: 0s;
+        -webkit-animation-delay: 0s;
+        -ms-animation-duration: 0s;
+        -ms-animation-delay: 0s;
+        -o-animation-duration: 0s;
+        -o-animation-delay: 0s;        
+        -moz-animation-duration: 0s;
+        -moz-animation-delay: 0s;          
     } 
     
     
