--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -7,9 +7,14 @@
        background-size: cover; and then remove the comments 
        surrounding color and background-color below those lines */
        
-	body {
-		color: #222;
-		background-color: rgba(206,198,195,0.25); 
+    body {
+	background: url('http://www.four51.com/Themes/Custom/df7e2b71-6326-4da6-a24f-554d7d910faf/backgroundImage/background-color-mezzoPix-grayscale.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	/*color: #222;
+	background-color: rgba(206,198,195,0.25); */
     }
     
     .backgroundShadow {
