--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -212,6 +212,25 @@
     
     /* Company Image */
     
+    /* ---------Image Float----------- */
+    /* By default this will be commented out. This centers the company image.
+       To move the image left or right remove the comments from that portion.
+       To add room to the left or right adjust the margin attribute
+       By default side to side margin will be 15px if float is enabled
+    */
+    
+    .move {
+        /* move left */
+        /*float: left !important; 
+        margin-left: 15px;
+        */
+        /* move right */
+        /*
+        float: right !important;
+        margin-right: 15px;
+        */
+    }
+    
     .jumbotron h2 img {
 	    max-height: 215px;
     	background-color: transparent;
@@ -268,8 +287,7 @@
         color: red !important;
     }
     
-    
-    
+
     
     
     
