--- a/app/css/theme.css
+++ b/app/css/theme.css
@@ -79,17 +79,11 @@ a:focus {
   max-width: 100%;
   height: auto;
 }
-
-
-
-
-
-
 .text-primary {
-  color: #0c2a3a;
+  color: #222;
 }
-a.text-primary:hover {
-  color: #030b0f;
+.printOrder .text-primary:hover {
+  color: #555;
 }
 .text-success {
   color: #666;
