--- a/app/partials/copyrightView.html
+++ b/app/partials/copyrightView.html
@@ -1,4 +1,4 @@
-<div class="footerContainer">
+<!--<div class="footerContainer">
     <p class="footerText">Our customer service department is available to assist you with your entire online ordering process.<br />
     Call us! <span class="colorHighlight">919.676.0522</span>
     </p>
@@ -6,3 +6,4 @@
 <div class="officeSuppliesContainer">
     <a class="officeSupplies" href="https://vibenet.thalerus.com/Regency">Cancel order and return to office supplies</a>
 </div>
+-->
