--- a/app/partials/cartView.html
+++ b/app/partials/cartView.html
@@ -236,7 +236,7 @@
 <!--here here here-->
                 <ul class="pull-right col-lg-8">
                     <li>
-                        <button type="submit" class="btn btn-primary saveColor" ng-click="saveChanges()">
+                        <button type="submit" class="btn btn-primary saveColor" ng-click="saveAndContinueShopping()">
                             <loadingindicator  ng-show="displayLoadingIndicator" />
                             <span class="continueShoppingButton">{{('Continue' | r) + ' ' + ('Shopping' | r) | xlat}}<span>
                         </button>
