--- a/app/css/theme.css
+++ b/app/css/theme.css
@@ -26,9 +26,6 @@ hr {
   border-top: 1px solid #ffffff;
 }
 
-
-
-
 * {
   -webkit-box-sizing: none;
   -moz-box-sizing: none;
@@ -2983,7 +2980,81 @@ font-weight: bold;
         padding: 5px 10px 5px 0;
     }
 
+    .cartTitle {
+        position: relative;
+        top: 15px;
+        left: 10px;
+        font-size: 24px;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
 
+    .checkoutButtonContainer {
+        position: relative;
+        left: 20px;
+        margin-bottom: 15px;
+    }
 
+    .checkoutBtn {
+        display: inline-block;
+        margin: 0 0 0 1%;
+        font-weight: normal;
+        text-align: center;
+        vertical-align: middle;
+        cursor: pointer;
+        background-image: none;
+        border: 1px solid transparent;
+        white-space: nowrap;
+        padding: 15px 20px;
+        font-size: 1em;
+        line-height: 1.42857143;
+        border-radius: 4px;
+    }
+
+    .smallCheckoutButton {
+        width: 23%;
+    }
+    
+    
+    .largeCheckoutButton {
+        width: 48%;
+    }
+    
+    
+@media (max-width: 767px) {
+    
+    .checkoutButtonContainer {
+        position: relative;
+        left: 0px;
+    }
+
+    .checkoutBtn {
+        display: inline-block;
+        margin: 0 0 0 0%;
+        font-weight: normal;
+        text-align: center;
+        vertical-align: middle;
+        cursor: pointer;
+        background-image: none;
+        border: 1px solid transparent;
+        white-space: nowrap;
+        padding: 15px 20px;
+        font-size: 1em;
+        line-height: 1.42857143;
+        border-radius: 4px;
+        border: 2px solid #bbb;
+    }
+
+    .smallCheckoutButton {
+        width: 100%;
+        margin-bottom: 0.5em;
+    }
+    
+    
+    .largeCheckoutButton {
+        width: 100%;
+        margin-bottom: 0.25em;
+    }
+}
 
 
