--- a/app/css/editor.css
+++ b/app/css/editor.css
@@ -1,1 +1,39 @@
 /*do not make changes to this file. It will be overwritten by the css editor. Put theme changes in custom.css*/
+
+@media (max-width: 767px) {
+    
+    .checkoutButtonContainer {
+        position: relative;
+        left: 0px;
+    }
+
+    .checkoutBtn {
+        display: inline-block;
+        margin: 0 0 0 0%;
+        font-weight: normal;
+        text-align: center;
+        vertical-align: middle;
+        cursor: pointer;
+        background-image: none;
+        border: 1px solid transparent;
+        white-space: nowrap;
+        padding: 15px 20px;
+        font-size: 1em;
+        line-height: 1.42857143;
+        border-radius: 4px;
+        border: 2px solid #bbb;
+    }
+
+    .smallCheckoutButton {
+        width: 100%;
+        margin-bottom: 0.5em;
+    }
+    
+    
+    .largeCheckoutButton {
+        width: 100%;
+        margin-bottom: 0.25em;
+    }
+}
+
+
