--- a/app/css/bootstrap-451.css
+++ b/app/css/bootstrap-451.css
@@ -531,7 +531,7 @@ a.bg-primary:hover {
   background-color: #030b0f;
 }
 .bg-success {
-  background-color: #dff0d8;
+  background-color: rgba(65,65,65,0.8);
 }
 a.bg-success:hover {
   background-color: #c1e2b3;
@@ -1510,7 +1510,9 @@ table th[class*="col-"] {
 .table > thead > tr.success > th,
 .table > tbody > tr.success > th,
 .table > tfoot > tr.success > th {
-  background-color: #dff0d8;
+  color: rgba(221,221,221,1);
+  background-color: rgba(65,65,65,0.8);
+  border-color: rgba(187,187,187,0.5);
 }
 .table-hover > tbody > tr > td.success:hover,
 .table-hover > tbody > tr > th.success:hover,
@@ -1854,9 +1856,9 @@ select[multiple].input-lg {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #67b168;
 }
 .has-success .input-group-addon {
-  color: #3c763d;
-  border-color: #3c763d;
-  background-color: #dff0d8;
+  color: rgba(221,221,221,1);
+  background-color: rgba(65,65,65,0.8);
+  border-color: rgba(187,187,187,0.5);
 }
 .has-success .form-control-feedback {
   color: #3c763d;
@@ -4513,9 +4515,9 @@ a.thumbnail.active {
   color: inherit;
 }
 .alert-success {
-  background-color: #dff0d8;
-  border-color: #d6e9c6;
-  color: #3c763d;
+  color: rgba(221,221,221,1);
+  background-color: rgba(65,65,65,0.8);
+  border-color: rgba(187,187,187,0.5);
 }
 .alert-success hr {
   border-top-color: #c9e2b3;
@@ -4717,8 +4719,8 @@ a.list-group-item.active:focus .list-group-item-text {
   color: #3ba2d7;
 }
 .list-group-item-success {
-  color: #3c763d;
-  background-color: #dff0d8;
+  color: rgba(221,221,221,1);
+  background-color: rgba(65,65,65,0.8);
 }
 a.list-group-item-success {
   color: #3c763d;
@@ -5096,12 +5098,12 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #cccccc;
 }
 .panel-success {
-  border-color: #d6e9c6;
+  border-color: #ddd;
 }
 .panel-success > .panel-heading {
-  color: #3c763d;
-  background-color: #dff0d8;
-  border-color: #d6e9c6;
+  color: rgba(221,221,221,1);
+  background-color: rgba(65,65,65,0.8);
+  border-color: rgba(187,187,187,0.5);
 }
 .panel-success > .panel-heading + .panel-collapse .panel-body,
 .panel-success > .panel-heading + .panel-collapse .panel-category-list:not(.no-panels),
@@ -5109,7 +5111,7 @@ a.list-group-item-danger.active:focus {
 .panel-success > .panel-heading + .panel-collapse .panel-lineitem,
 .panel-success > .panel-heading + .panel-collapse .panel-order-history,
 .panel-success > .panel-heading + .panel-collapse .panel-order-shipping-multiple {
-  border-top-color: #d6e9c6;
+  border-top-color: #ddd;
 }
 .panel-success > .panel-footer + .panel-collapse .panel-body,
 .panel-success > .panel-footer + .panel-collapse .panel-category-list:not(.no-panels),
@@ -5117,7 +5119,7 @@ a.list-group-item-danger.active:focus {
 .panel-success > .panel-footer + .panel-collapse .panel-lineitem,
 .panel-success > .panel-footer + .panel-collapse .panel-order-history,
 .panel-success > .panel-footer + .panel-collapse .panel-order-shipping-multiple {
-  border-bottom-color: #d6e9c6;
+  border-bottom-color: #ddd;
 }
 .panel-info {
   border-color: #bce8f1;
@@ -6440,7 +6442,7 @@ button::-moz-focus-inner {
   width: 50%;
 }
 .navbar-fixed-bottom ul li:last-child .btn {
- 
+  text-transform: uppercase;
 }
 .navbar-fixed-bottom ul li .btn {
   width: 100%;
@@ -6448,6 +6450,7 @@ button::-moz-focus-inner {
   border: none;
   border-radius: 0;
   padding: 20px 0;
+  text-transform: lowercase;
 }
 .navbar-fixed-bottom ul li .btn-warning[disabled] {
   opacity: 1;
