--- a/app/partials/categoryList.html
+++ b/app/partials/categoryList.html
@@ -18,7 +18,9 @@
                     <div class="well">
                         <a ng-href="catalog/{{c.InteropID}}">
                             <figure ng-show="c.Image.URL">
-                                <img class="img-responsive" ng-src="{{c.Image.URL}}"/>
+                                 <img class="img-responsive" ng-src="{{c.Image.URL}}"/>
+                            <!-- Comment: Remove line above and make this active to generate dynamic load of category images.    <img class="catImages img-responsive" ng-src="https://www.four51.com/Themes/Custom/df7e2b71-6326-4da6-a24f-554d7d910faf/companyId/{{companyId}}/categories/{{c.InteropID}}.jpg"/>
+                              -->
                             </figure>
                             <div class="empty" ng-show="!c.Image.URL">
                                 <span class="fa empty"><i class="fa fa-camera"></i></span>
